@startuml

title Klasse Diagram voor API-integriteit met State Pattern

interface IApi {
    + fetchData() : String
}

class ApiV1 {
    + fetchData() : String
    + upgradeToV2() : void
}

class ApiV2 {
    + fetchData() : String
}

class BookingApi {
    + getData() : String
}

IApi <|.. ApiV1
IApi <|.. ApiV2

ApiV1 -> ApiV2 : "Schakelt door naar indien nodig"
ApiV1 -> BookingApi : "Vraagt data op bij versie 1"
ApiV2 -> BookingApi : "Vraagt data op bij versie 2"

@enduml
